Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -160,18 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the p, d and q parameters to take any value between 0 and 2\n",
-    "p = d = q = None\n",
-    "\n",
+    "p = d = q = 1\n",
     "# Generate all different combinations of p, q and q triplets\n",
-    "pdq = None\n",
+    "pdq = 1\n",
     "\n",
     "# Generate all different combinations of seasonal p, q and q triplets (use 12 for frequency)\n",
-    "pdqs = None\n"
+    "pdqs = 12\n"
    ]
   },
   {
@@ -559,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
